--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.3",
+    "expect": "^26.6.2",
     "express": "^4.17.1",
+    "mocha": "^8.2.1",
+    "moment": "^2.29.1",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.7"
   }
 }
