--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.907.0",
     "ejs": "^3.1.3",
     "expect": "^26.6.2",
     "express": "^4.17.1",
