--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zoom-clone",
+  "name": "TheRightGuru-LiveClass",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.907.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.3",
     "expect": "^26.6.2",
     "express": "^4.17.1",
