--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "mocha": "^8.2.1",
     "moment": "^2.29.1",
+    "peer": "^0.6.1",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
   },
